# Machine-Learning-Specialization-by-Andrew-NG

./: README.md  Regularized_log._regre.py  multi-feature_predic(qualitative).py  multi-feature_predict(Regression).py  multi-feature_predict(quantitative).py  one-feature_predict(Regression).py  pyproject.toml
Course_1/: Data_base.py
Course_1/Week_1/Solutions/: C1_W1_Lab03_Cost_function_Soln.ipynb
Course_2/Week_1/: NumPy Model Implementation (Forward Prop in NumPy).py  Tensorflow Model Implementation.py  Vectorized NumPy Model Implementation (Optional).py
Course_2/Week_2/: Neural Network with Softmax output.py
Course_2/Week_3/: Advice_for_Applying_Machine_Learning.py
Course_2/Week_4/: Practice Lab: Decision Trees.py
Course_3/Week_1/: Clustering.py  anomaly_detection.py  data_set.py
Course_3/Week_2/: Collaborative_filtering_algorithm.py  Content_based_filtering.py  a.py
Course_3/Week_3/: Reinforcement_Learning.py
Course_3/Week_3/Package_1/: utils.py
