[tool.poetry]
name = "Machine-Learning-Specialization-by-Andrew-NG"
version = "0.1.0"
description = ""
authors = ["Tiago Reis <Tiago.B.C.Reis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.23.0"
matplotlib = "3.6.0"
lab-utils = "0.5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"